# eureka-notify

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
.cargo/: config.toml
data/: map-ids.json  weather-index.json
src/: data.rs  datetime_eorzea.rs  lib.rs  main.rs  ocean.rs  status.rs  store.rs  time.rs  weather.rs
src/discord/: commands.rs  mod.rs
